--- a/src/pages/livros/index.astro
+++ b/src/pages/livros/index.astro
@@ -51,10 +51,15 @@ books.forEach(book => {
 			border-radius: 4px;
 		}
 
+		.book-card > a {
+			display: block;
+		}
+
 		.book-cover img {
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
+			display: block;
 		}
 
 		.book-card h2 {
